--- a/Eshop/Views/Shared/_Layout.cshtml
+++ b/Eshop/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - To Neo Eshop Twra Kai sto xwro sas</p>
         </footer>
     </div>
 
